=========================================================================
CHANGE LOG
=========================================================================


Changes up to 1.00b16

    * switched from Vera to DejaVu fonts in order to get symbols.

    * dot representation for quick previewing of map contents

    * "gradient" command for visualizing maps as gradient fields

    * "reinitialize settings" for global & object settings (only, for now)

    * fixed mesh_type = 1 for molecular objects

    * fixed bug when rendering spheres alone

Changes up to 1.00b15

    * fixed bug with dragging back clip plane 

    * fixes for proprietary code (.MOE file reading & embedding)

Changes up to 1.00b14

    * matrix handling for groups

    * bug fixes for matrix_mode=1, but more remain so 0 stays the default

    * improvements to the mutagenesis wizard (caps, charges, & hydrogens).

    * fixed serious reference-thrashing flaw in the molecular editor

Changes up to 1.00b13

    * fixed geometry-based atom selection processing bug for last  small objects

    * support for some Gaussian cube files (orthognal cartesian-aligned)

    * pseudoatoms

    * fixed some logging bugs (yet many more remain...)

    * fixed 'fetch' and the Remote PDB Loader plugin

Changes up to 1.00b12

    * groups

    * fixed bond setting selection processing issue

    * fixed memory leak in surface algorithm

    * fixed session file chaining bug on Windows

Changes up to 1.00b11

    * fixed stick_ball / transparency bug

Changes up to 1.00b10

    * label_digits settings

    * surface_negative_visible and _color settings

    * mesh_negative_visible and _color settings

Changes up to 1.00b09

    * ray_label_specular setting

    * mesh_skip setting

    * bug fix for label scaling

    * bug fix for ramp_new

Changes up to 1.00b07

    * fixed normal refinement glitch
 
    * fixed cartoon assignment for objects without a state 0
 
    * bug fixes for surface representation
